--- a/contact.html
+++ b/contact.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="contact us page for croissant.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>contact us page - croissant.com</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <h1>🥐 Contact us</h1>
     <p>To contact croissant.com, please email us at <a href="mailto:"> hello@croissant.com</a> for more info</p>
-    <div class="links"> <a href="/index.html">Homepage</a>
-        <a href="/photo.html">Photo</a>  
-        <a href="/contact.html">Contact</a> 
-        </div>
+   
+  <div class="links"> <a href="/index.html" title="croissant webpage">Homepage</a>
+    <a href="/photo.html" title="croissant photo">Photo</a>  
+    <a href="/contact.html" title="contact us webpage">Contact</a> 
+    </div>
 </body>
 </html>
