--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="description of croissants">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>croissant.com</title>
 </head>
 <body>
     <h1>🥐 Croissant</h1>
     <p>A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent shape. Croissants and other viennoiserie are made of a layered yeast-leavened dough</p>
-   <div class="links"> <a href="/index.html">Homepage</a>
-<a href="/photo.html">Photo</a>  
-<a href="/contact.html">Contact</a> 
-</div>
+ 
+    <div class="links"> <a href="/index.html" title="croissant webpage">Homepage</a>
+        <a href="/photo.html" title="croissant photo">Photo</a>  
+        <a href="/contact.html" title="contact us webpage">Contact</a> 
+        </div>
 </body>
 </html>
