--- a/photo.html
+++ b/photo.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="a photo of croissant - croissant.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>a photo of croissant - croissant.com</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <h1>🥐 A picture of a croissant</h1>  
-  <img src="/photos/croissants.png" alt="croissant Photo">
-  <div class="links"> <a href="/index.html">Homepage</a>
-    <a href="/photo.html">Photo</a>  
-    <a href="/contact.html">Contact</a> 
+  <img src="/photos/croissants.png" alt="croissant">
+  <div class="links"> <a href="/index.html" title="croissant webpage">Homepage</a>
+    <a href="/photo.html" title="croissant photo">Photo</a>  
+    <a href="/contact.html" title="contact us webpage">Contact</a> 
     </div>
 </body>
 </html>
